# treff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  claude-progress.txt  init.sh  pyproject.toml  requirements.txt  test_hashtag_api.py  vercel.json
.autoforge/: allowed_commands.yaml  features.db
.autoforge/prompts/: .spec_status.json  app_spec.txt  initializer_prompt.md
.claude/plans/: sleepy-crafting-corbato.md
.github/workflows/: e2e-tests.yml
api/: index.py
backend/: .env.example  alembic.ini  migrate.py  requirements.txt  test_strategy_routes.py  test_video_scripts.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  paths.py  rate_limiter.py  sanitizer.py  security.py  seed_audio_suggestions.py  seed_content_pillars.py  seed_ctas.py  seed_hashtag_sets.py  seed_humor_formats.py  seed_music_tracks.py  seed_recurring_formats.py  seed_suggestions.py  seed_templates.py  seed_treff_standard_templates.py  seed_users.py  seed_video_templates.py  strategy_loader.py  text_generator.py
backend/app/models/: __init__.py  asset.py  audio_suggestion.py  background_task.py  calendar_entry.py  campaign.py  cta.py  (+29 more)
backend/migrations/: README  env.py
docs/: DEPLOYMENT.md  content-strategy.md  social-content-strategy.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
frontend/e2e/: auth.setup.js  calendar.spec.js  content-pillar.spec.js  create-post.spec.js  dashboard.spec.js  helpers.js  login.spec.js  navigation.spec.js  templates.spec.js
frontend/src/: App.vue
(+240 files in other folders)
