[project]
name = "treff-api"
version = "1.0.0"
description = "TREFF Sprachreisen Post-Generator API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "greenlet>=3.3.1",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.2",
    "httpx>=0.25.2",
    "pillow>=12.1.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.1.0,<3.0",
    "google-genai>=1.0.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
